--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,13 @@
 /.pnp
 .pnp.js
 
+#sw stuff
+public/sw.js
+public/workbox-*.js
+
 # testing
 /coverage
+/src/components/**/__snapshots__/
 
 # next.js
 /.next/
