--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "component-library",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Anderson Rodrigues",
+    "email": "anddersonrds@gmail.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest",
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
@@ -26,6 +31,7 @@
   },
   "dependencies": {
     "next": "10.0.4",
+    "next-pwa": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
@@ -54,6 +60,7 @@
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.5.3",
+    "plop": "^2.7.4",
     "typescript": "^4.1.3"
   }
 }
